--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^8.15.0",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
-    "npm": "^11.4.0"
+    "npm": "^11.4.0",
+    "react": "^19.1.0",
+    "react-router-dom": "^7.6.0"
   }
 }
