--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10",
     "npm": "^11.4.0",
+    "path": "^0.12.7",
     "react": "^19.1.0",
     "react-router-dom": "^7.6.0"
   }
